--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,135 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    // Disable specific ESLint rules
+    "accessor-pairs": "off",
+    "array-callback-return": "off",
+    "block-scoped-var": "off",
+    "class-methods-use-this": "off",
+    "consistent-return": "off",
+    "default-case": "off",
+    "dot-location": "off",
+    "dot-notation": "off",
+    "eqeqeq": "off",
+    "guard-for-in": "off",
+    "no-alert": "off",
+    "no-caller": "off",
+    "no-case-declarations": "off",
+    "no-div-regex": "off",
+    "no-else-return": "off",
+    "no-empty-function": "off",
+    "no-eq-null": "off",
+    "no-eval": "off",
+    "no-extend-native": "off",
+    "no-extra-bind": "off",
+    "no-extra-label": "off",
+    "no-fallthrough": "off",
+    "no-floating-decimal": "off",
+    "no-global-assign": "off",
+    "no-implicit-coercion": "off",
+    "no-implicit-globals": "off",
+    "no-implied-eval": "off",
+    "no-invalid-this": "off",
+    "no-iterator": "off",
+    "no-labels": "off",
+    "no-lone-blocks": "off",
+    "no-loop-func": "off",
+    "no-magic-numbers": "off",
+    "no-multi-spaces": "off",
+    "no-multi-str": "off",
+    "no-new": "off",
+    "no-new-func": "off",
+    "no-new-wrappers": "off",
+    "no-octal": "off",
+    "no-octal-escape": "off",
+    "no-param-reassign": "off",
+    "no-proto": "off",
+    "no-redeclare": "off",
+    "no-restricted-properties": "off",
+    "no-return-assign": "off",
+    "no-return-await": "off",
+    "no-script-url": "off",
+    "no-self-assign": "off",
+    "no-self-compare": "off",
+    "no-sequences": "off",
+    "no-throw-literal": "off",
+    "no-unmodified-loop-condition": "off",
+    "no-unused-expressions": "off",
+    "no-unused-labels": "off",
+    "no-useless-call": "off",
+    "no-useless-concat": "off",
+    "no-useless-escape": "off",
+    "no-useless-return": "off",
+    "no-void": "off",
+    "no-warning-comments": "off",
+    "no-with": "off",
+    "radix": "off",
+    "require-await": "off",
+    "vars-on-top": "off",
+    "wrap-iife": "off",
+    "yoda": "off",
+    "@typescript-eslint/array-type": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/ban-tslint-comment": "off",
+    "@typescript-eslint/consistent-type-assertions": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-member-accessibility": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-array-constructor": "off",
+    "@typescript-eslint/no-base-to-string": "off",
+    "@typescript-eslint/no-confusing-non-null-assertion": "off",
+    "@typescript-eslint/no-confusing-void-expression": "off",
+    "@typescript-eslint/no-dynamic-delete": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-extra-non-null-assertion": "off",
+    "@typescript-eslint/no-extra-parens": "off",
+    "@typescript-eslint/no-extra-semi": "off",
+    "@typescript-eslint/no-extraneous-class": "off",
+    "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/no-for-in-array": "off",
+    "@typescript-eslint/no-implied-eval": "off",
+    "@typescript-eslint/no-inferrable-types": "off",
+    "@typescript-eslint/no-magic-numbers": "off",
+    "@typescript-eslint/no-misused-new": "off",
+    "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/no-namespace": "off",
+    "@typescript-eslint/no-non-null-asserted-optional-chain": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-parameter-properties": "off",
+    "@typescript-eslint/no-require-imports": "off",
+    "@typescript-eslint/no-this-alias": "off",
+    "@typescript-eslint/no-throw-literal": "off",
+    "@typescript-eslint/no-type-alias": "off",
+    "@typescript-eslint/no-unnecessary-boolean-literal-compare": "off",
+    "@typescript-eslint/no-unnecessary-condition": "off",
+    "@typescript-eslint/no-unnecessary-qualifier": "off",
+    "@typescript-eslint/no-unnecessary-type-arguments": "off",
+    "@typescript-eslint/no-unnecessary-type-assertion": "off",
+    "@typescript-eslint/no-unnecessary-type-constraint": "off",
+    "@typescript-eslint/no-unsafe-argument": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/no-useless-constructor": "off",
+    "@typescript-eslint/prefer-as-const": "off",
+    "@typescript-eslint/prefer-enum-initializers": "off",
+    "@typescript-eslint/prefer-for-of": "off",
+    "@typescript-eslint/prefer-function-type": "off",
+    "@typescript-eslint/prefer-includes": "off",
+    "@typescript-eslint/prefer-literal-enum-member": "off",
+    "@typescript-eslint/prefer-namespace-keyword": "off",
+    "@typescript-eslint/prefer-nullish-coalescing": "off",
+    "react/prop-types": "off",
+    "no-empty": "off",
+    "no-constant-condition": "off",
+    "no-extra-semi": "off"
+     // Disable React prop-types check
+
+    // Disable specific ESLint rules for your custom files
+ }
 }
