--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^10.16.2",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
