--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "viem": "^2.9.12"
   },
   "devDependencies": {
     "@types/node": "^20",
